[tool.poetry]
name = "jupyter-project-skeleton"
version = "0.1.0"
description = ""
authors = ["Peter <pwsandoval@outlook.com>"]
readme = "README.md"
packages = [{include = "jupyter_project_skeleton"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.25.2"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
